Changed signature of buildVedicCalendarLocaleList() to reduce run-time memory usage.